fixed uneven header margins

--- a/assets/scss/layout/_page-header.scss
+++ b/assets/scss/layout/_page-header.scss
@@ -1,5 +1,5 @@
 .page-header-container {
-  min-height: 80vh;
+  //min-height: 80vh;
   padding-top: 120px;
   p {
     @extend .lead;
@@ -7,5 +7,4 @@
 }
 
 .page-header-teaser {
-
 }
